@@ -17,6 +17,7 @@
 # along with OpenQuake. If not, see <http://www.gnu.org/licenses/>.
 
 import re
+import os
 import pickle
 import logging
 import operator
@@ -251,7 +252,42 @@ def export_hazard_curves_csv(key, dest, sitecol, curves_by_imt,
         values = numpy.concatenate([curves_by_imt[sid][imt] for imt in imtls])
         hcurves[sid] = (lon, lat) + tuple(values)
     write_csv(dest, hcurves)
-    return {dest: dest}
+    return [dest]
+
+
+def add_imt(fname, imt):
+    """
+    >>> add_imt('/path/to/hcurve_23.csv', 'SA(0.1)')
+    '/path/to/hcurve-SA(0.1)_23.csv'
+    """
+    name = os.path.basename(fname)
+    newname = re.sub('(_\d+\.)', '-%s\\1' % imt, name)
+    return os.path.join(os.path.dirname(fname), newname)
+
+
+def export_hcurves_by_imt_csv(key, dest, sitecol, curves_by_imt,
+                              imtls, investigation_time=None):
+    """
+    Export the curves of the given realization into XML.
+
+    :param key: output_type and export_type
+    :param dest: name of the exported file
+    :param sitecol: site collection
+    :param curves_by_imt: dictionary with the curves keyed by IMT
+    :param dict imtls: intensity measure types and levels
+    :param investigation_time: investigation time
+    """
+    nsites = len(sitecol)
+    fnames = []
+    for imt, imls in imtls.items():
+        lst = [('lon', F32), ('lat', F32)]
+        for iml in imls:
+            lst.append((str(iml), F32))
+        hcurves = numpy.zeros(nsites, lst)
+        for sid, lon, lat in zip(range(nsites), sitecol.lons, sitecol.lats):
+            hcurves[sid] = (lon, lat) + tuple(curves_by_imt[sid][imt])
+        fnames.append(write_csv(add_imt(dest, imt), hcurves))
+    return fnames
 
 
 def hazard_curve_name(dstore, ekey, kind, rlzs_assoc):
@@ -299,11 +335,20 @@ def export_hcurves_csv(ekey, dstore):
         if key == 'uhs':
             uhs_curves = calc.make_uhs(hcurves, oq.imtls, oq.poes)
             write_csv(fname, util.compose_arrays(sitemesh, uhs_curves))
+            fnames.append(fname)
         elif key == 'hmaps':
             write_csv(fname, util.compose_arrays(sitemesh, hcurves))
+            fnames.append(fname)
         else:
-            export_hazard_curves_csv(ekey, fname, sitecol, hcurves, oq.imtls)
-        fnames.append(fname)
+            if export.from_db:  # called by export_from_db
+                fnames.extend(
+                    export_hcurves_by_imt_csv(
+                        ekey, fname, sitecol, hcurves, oq.imtls))
+            else:  # when exporting directly from the datastore
+                fnames.extend(
+                    export_hazard_curves_csv(
+                        ekey, fname, sitecol, hcurves, oq.imtls))
+
     return sorted(fnames)
 
 UHS = collections.namedtuple('UHS', 'imls location')
